tests/machine/x/lua/group_by_multi_join_sort.error
line 223: run error: exit status 1
lua: ...e/mochi/tests/machine/x/lua/group_by_multi_join_sort.lua:223: attempt to call a table value
stack traceback:
	...e/mochi/tests/machine/x/lua/group_by_multi_join_sort.lua:223: in main chunk
	[C]: in ?

